fix(ecep-113): blog list title first article space
Add space between blog list title and first article.

This stops article hover outline from overlapping the title.

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.css
@@ -38,6 +38,10 @@ Styleguide Components.DjangoCMS.Blog.App
 
 /* Header */
 
+.blog-list > header {
+  margin-bottom: var(--blog-item-buffer);
+}
+
 ul.post-detail {
   list-style: none;
 
